* Change the URL of the plugin on Wordpress
git-svn-id: https://plugins.svn.wordpress.org/backup-scheduler/trunk@721784 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/core/lang/SL_framework-el_GR.po
+++ b/core/lang/SL_framework-el_GR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-04-26T23:10:36+00:00\n"
+"PO-Revision-Date: 2013-04-07T13:52:08+00:00\n"
 "Last-Translator: JackGarivaldis <http://diasporic.org>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -26,65 +26,41 @@ msgstr "Σχετικά..."
 msgid "Settings"
 msgstr "Ρυθμίσεις"
 
-msgid "Advanced options"
-msgstr "Για Προχωρημένους"
+msgid "Log options"
+msgstr ""
 
-msgid "Show the advanced options:"
-msgstr "Δείξε τις επιλογές για προχωρημένους"
+msgid "What is the debug level:"
+msgstr ""
 
-msgid "Will display additionnal information on the plugin (including SVN features). Recommended for developpers which develop plugins with this framework."
-msgstr "Θα δείξει περισσότερες πληροφορίες για το plugin (συμπεριλαμβανομένων των χαρακτηριστικών SVN). Συνιστάτε για προγραμματιστές που γράφουν plugins σ&#039; αυτό το πλαίσιο."
+msgid "See the debug logs"
+msgstr ""
 
-msgid "Show the developpers documentation:"
-msgstr "Δείξε τις πληροφορίες για προγραμματιστές:"
+msgid "1=log only the critical errors;"
+msgstr ""
 
-msgid "You should register a new wordpress plugin first on %s."
-msgstr "Πρέπει να καταχωρήσεις ένα νέο plugin για Wordpress στο %."
+msgid "2=log only the critical errors and the standard errors;"
+msgstr ""
 
-msgid "What is your SVN Login:"
-msgstr "Ποιοι είναι οι SVN κωδικοί σου:"
+msgid "3=log only the critical errors, the standard errors and the warnings;"
+msgstr ""
 
-msgid "You should have an account on %s before. Thus, the login will be the same!"
-msgstr "Πρέπει να έχετε λογαριασμό στο % πρώτα. Έτσι οι κωδικοί πρόσβασης θα είναι ίδιοι!"
+msgid "4=log information;"
+msgstr ""
 
-msgid "What is your SVN Password:"
-msgstr "Ποιο είναι το δικό σου SVN Passowrd:"
+msgid "5=log verbose;"
+msgstr ""
 
-msgid "Same comment as above..."
-msgstr "Το σχόλιο όπως πιο πάνω..."
+msgid "Multisite Management"
+msgstr ""
 
-msgid "What is your Author Name:"
-msgstr "Ποιο είναι το δικό σου όνομα Συγγραφέα:"
+msgid "Do you want to allow sub-blogs to modify the translations of the plugins:"
+msgstr ""
 
-msgid "Your author name is the name that is displayed in your plugin."
-msgstr "Το δικό σου όνομα συγγραφέα είναι εκείνο που φαίνεται στο plugin."
-
-msgid "Do you want to udate the translations files when the plugin page is called:"
-msgstr "Θέλετε να διορθώσετε τα μεταφρασμένα αρχεία που χρησιμεύουν όταν το plugin χρησιμοποιείται;"
-
-msgid "This is useful if you develop a plugin, thus you will see when new sentences need to be translated."
-msgstr "Αυτό είναι χρήσιμο όταν προγραμματίσετε κάποιο plugin, κι έτσι θα δείτε νέες προτάσεις που χρειάζονται μετάφραση."
-
-msgid "IMAP Login:"
-msgstr "Πρόσβαση IMAP:"
-
-msgid "This is useful if you want that the framework retrieve automatically the translations file into an IMAP mailbox"
-msgstr "Αυτό είναι χρήσιμο όταν θέλετε το πλαίσιο να καλεί τα αρχεία μεταφράσεων αυτόματα στο mailbox του IMAP"
-
-msgid "IMAP Password:"
-msgstr "Κωδικός IMAP:"
-
-msgid "IMAP Server:"
-msgstr "IMAP Server:"
-
-msgid "Should be something like %s"
-msgstr "Πρέπει να είναι κάτι σαν %"
+msgid "If this option is unchecked, the translation tab won't be displayed in the blog administration panel."
+msgstr ""
 
 msgid "Summary page for the plugins developped with the SL framework"
 msgstr "Συνοπτική σελίδα για τα plugins που προγραμματίστηκαν με το πλαίσιο SL"
-
-msgid "The core file used for the SedLex plugins is:"
-msgstr "Το κυριότερο (core) αρχείο που χρησιμοποιήθηκε για το Sedlex plugin είναι:"
 
 msgid "For now, you have installed %d  plugins including %d plugins developped with the 'SL framework':"
 msgstr "Για την ώρα, έχετε εγκαταστήσει % plugins συμπεριλαμβανομένων % plugins που έχει το πλαίσιο &#039;SL&#039;"
@@ -95,11 +71,11 @@ msgstr "Όνομα του plugin"
 msgid "Description"
 msgstr "Λεπτομέρειες"
 
-msgid "Status of the core"
-msgstr "Κατάσταση του core"
+msgid "There is a SQL database for this plugin"
+msgstr ""
 
 msgid "Version: %s by %s"
-msgstr "Παραλλαγή (version): % από %"
+msgstr "Παραλλαγή (version): %s από %s"
 
 msgid "List of SL plugins"
 msgstr "Κατάλογος plugins του πλαισίου SL"
@@ -107,74 +83,107 @@ msgstr "Κατάλογος plugins του πλαισίου SL"
 msgid "Parameters of the framework"
 msgstr "Παράμετροι του πλαισίου"
 
-msgid "The following description is a quick tutorial on about how to create a plugin with the SL framework. (Please note that the following description is in English for developpers, sorry for this inconvenience)"
-msgstr "Οι πληροφορίες πιο κάτω είναι ένα σύντομο εκπαιδευτικό για το πώς να δημιουργήσετε ένα plugin στο πλαίσιο SL. (Σημειώστε ότι οι παρακάτω πληρφορίες είναι στην Αγγλική για τους προγραμματιστές)"
-
-msgid "How to develop a plugin?"
-msgstr "Πώς να δημιουργήσετε ένα plugin."
-
-msgid "Framework documentation"
-msgstr "Πληροφοριακά έγγραφα πλαισίου"
-
 msgid "Manage translation of the framework"
 msgstr "Χειριστείτε τη μετάφραση του πλαισίου"
 
-msgid "An Unexpected HTTP Error occurred during the API request."
-msgstr "Ένας απρόσμενος HTTP Error σημειώθηκε κατά την κλήση του API."
+msgid "The folder %s is not %s !"
+msgstr ""
 
-msgid "This plugin does not seem to be hosted on the wordpress repository."
-msgstr "Αυτό το plugin δεν φαίνεται να συμπεριλαμβάνεται στα αρχεία της Wordpress."
+msgid "The file %s is not %s !"
+msgstr ""
 
-msgid "The Wordpress page: %s"
-msgstr "Η σελίδα του Wordpress: %"
+msgid "The folder %s does not exists and cannot be created !"
+msgstr ""
 
-msgid "Last update:"
-msgstr "Τελευταία εκσυγχρόνηση:"
+msgid "The file %s does not exists and cannot be created !"
+msgstr ""
 
-msgid "Rating: %s"
-msgstr "Εκτίμηση: %"
+msgid "There are some issues with folders rights. Please corret them as soon as possible as they could induce bugs and instabilities."
+msgstr ""
 
-msgid "by %s persons"
-msgstr "από % άτομα"
+msgid "Please see below:"
+msgstr ""
 
-msgid "Number of download:"
-msgstr "Αριθμός του download:"
+msgid "KB"
+msgstr "ΚΒ"
 
-msgid "General modifications:"
-msgstr "Γενικές αλλαγές:"
+msgid "MB"
+msgstr "ΜΒ"
 
-msgid "Quick"
-msgstr "Γρήγορο"
+msgid "GB"
+msgstr "GB"
 
-msgid "Slow"
-msgstr "Αργό"
+msgid "Error: the submitted value is not an integer and thus, the parameter has not been updated!"
+msgstr ""
 
-msgid "folder created"
-msgstr "Το αρχείο δημιουργήθηκε"
+msgid "Error: the submitted string does not match the constrains"
+msgstr ""
 
-msgid "folder creation has failed !"
-msgstr "Η δημιουργία του αρχείου απέτυχε !"
+msgid "Error: the submitted file can not be uploaded!"
+msgstr ""
 
-msgid "%s bytes transfered"
-msgstr "% bytes μεταφέρθηκαν"
+msgid "Error: security issue!"
+msgstr ""
 
-msgid "Confirmation"
-msgstr "Συγκατάθεση"
+msgid "Parameters"
+msgstr "Παράμετροι"
 
-msgid "Readme file"
-msgstr "Αρχείο ανάγνωσης"
+msgid "Here are the parameters of the plugin. Modify them at will to fit your needs."
+msgstr ""
 
-msgid "Save these data"
-msgstr "Αποθηκεύστε αυτές τις πληροφορίες"
+msgid "Here are the parameters of the framework. Modify them at will to fit your needs."
+msgstr ""
 
-msgid "The current text"
-msgstr "Αυτό το κείμενο"
+msgid "Values"
+msgstr "Αξίες"
 
-msgid "The proposed text"
-msgstr "Το προτεινόμενο κείμενο"
+msgid "Warning: some characters have been removed because they are not allowed here"
+msgstr ""
+
+msgid "(integer)"
+msgstr ""
+
+msgid "(If you want to delete this file, please check this box %s)"
+msgstr ""
 
 msgid "Update"
 msgstr "Εκσυχρόνηση"
+
+msgid "Reset to default values"
+msgstr ""
+
+msgid "Some parameters have not been updated due to errors (see below)!"
+msgstr ""
+
+msgid "Parameters have been updated (but with some warnings)!"
+msgstr ""
+
+msgid "Parameters have been updated successfully!"
+msgstr ""
+
+msgid "Parameters have been reset to their default values!"
+msgstr ""
+
+msgid "Here, you may configure three levels of translations: at the plugin level, at the framework level, and at the dashboard level."
+msgstr ""
+
+msgid "Please be informed that your current language is %s. Text will be translated if a translation is available."
+msgstr ""
+
+msgid "If you want to modify the language, please go in %s and find %s or %s. The second argument is your language and you may modify it as you want."
+msgstr ""
+
+msgid "Translations available for this plugin (i.e. %s)"
+msgstr ""
+
+msgid "Translations available for the SL framework (stored in %s)"
+msgstr ""
+
+msgid "Adding a new translation for this language: %s"
+msgstr ""
+
+msgid "Sentence to translate"
+msgstr ""
 
 msgid "Translation"
 msgstr "Μετάφραση"
@@ -182,8 +191,32 @@ msgstr "Μετάφραση"
 msgid "Your name:"
 msgstr "Το όνομά σας:"
 
+msgid "(if your name/pseudo is already in the list, there is no need to fill this input)"
+msgstr ""
+
 msgid "Your email or your website:"
 msgstr "Το email ή την ιστοσελίδα σας:"
+
+msgid "Create the translation files"
+msgstr ""
+
+msgid "Modifying the translation for this language: %s"
+msgstr ""
+
+msgid "Modify the translation files"
+msgstr ""
+
+msgid "The file %s cannot be extracted from mail attachments"
+msgstr ""
+
+msgid "The file %s cannot be written in the %s folder"
+msgstr ""
+
+msgid "The file %s has been imported in the %s folder"
+msgstr ""
+
+msgid "Plugin"
+msgstr "Plugin"
 
 msgid "Language"
 msgstr "Γλώσσα"
@@ -192,82 +225,22 @@ msgid "Information"
 msgstr "Πληροφορίες"
 
 msgid "%s sentences have been translated (i.e. %s)."
-msgstr "% προτάσεις έχουν ματαφραστεί (π.χ. %)."
+msgstr "%s προτάσεις έχουν ματαφραστεί (π.χ. %s)."
 
 msgid "Delete"
 msgstr "Διαγραφή"
 
-msgid "Import"
-msgstr "Eισαγωγή"
+msgid "See the new translation file and merge"
+msgstr ""
 
-msgid "Merge"
-msgstr "Συγχώνεψη"
+msgid "%s sentences have been newly translated and %s sentences have been modified (the old file has %s translated sentences)."
+msgstr ""
 
-msgid "Old sentence"
-msgstr "Παλιά πρόταση"
+msgid "See the modifications/new translations and Merge"
+msgstr ""
 
-msgid "New sentence"
-msgstr "Νέα Πρόταση"
-
-msgid "To replace?"
-msgstr "Ν&#039; αντικαταστήσετε;"
-
-msgid "Download"
-msgstr "Καταχώρηση"
-
-msgid "Translators"
-msgstr "Μεταφραστές"
-
-msgid "Add"
-msgstr "Πρόσθεση"
-
-msgid "Select all"
-msgstr "Επιλέξτε όλα"
-
-msgid "Un-select all"
-msgstr "Αφαιρέστε όλες τις επιλογές"
-
-msgid "Methods"
-msgstr "Μέθοδοι"
-
-msgid "Details"
-msgstr "Λεπτομέρειες"
-
-msgid "[METHOD]"
-msgstr "[ΜΕΘΟΔΟΣ]"
-
-msgid "Parameters:"
-msgstr "Παράμετροι:"
-
-msgid "[optional]"
-msgstr "[επιλεκτικά]"
-
-msgid "Your email:"
-msgstr "Η ηλεκτρονική σας διεύθυνση:"
-
-msgid "Your comments:"
-msgstr "Τα σχόλιά σας;"
-
-msgid "Commit comment:"
-msgstr "Παραδώστε το σχόλιο:"
-
-msgid "Sending to the repository in progress..."
-msgstr "Η αποθήκευση είναι σε εξέλιξη..."
-
-msgid "The commit has ended but there is an error!"
-msgstr "Η παράδοση ολοκληρώθηκε αλλά υπάρχει σφάλμα!"
-
-msgid "Version number"
-msgstr "Αριθμός παραλλαγής"
-
-msgid "Parameters"
-msgstr "Παράμετροι"
-
-msgid "Values"
-msgstr "Αξίες"
-
-msgid "Plugin"
-msgstr "Plugin"
+msgid "See the new translations and Merge"
+msgstr ""
 
 msgid "New translations are available"
 msgstr "Υπάρχουν νέες μεταφράσεις"
@@ -278,23 +251,71 @@ msgstr "Υπάρχουν ανανεώσεις μεταφράσεων"
 msgid "What are the differences between these two files?"
 msgstr "Ποιες είναι οι διαφορές μεταξύ αυτών των δυο αρχείων;"
 
+msgid "Old sentence"
+msgstr "Παλιά πρόταση"
+
+msgid "New sentence"
+msgstr "Νέα Πρόταση"
+
+msgid "To replace?"
+msgstr "Ν&#039; αντικαταστήσετε;"
+
+msgid "Merge"
+msgstr "Συγχώνεψη"
+
+msgid "%s sentences have been translated (i.e. %s) %s %s sentences have to be checked because they are close (but not identical) to those to translate.%s"
+msgstr ""
+
 msgid "The translation %s have been sent"
-msgstr "Οι μεταφράσεις % έχουν αποσταλεί."
+msgstr "Οι μεταφράσεις %s έχουν αποσταλεί."
+
+msgid "An error occured sending the email."
+msgstr ""
 
 msgid "Make sure that your wordpress is able to send email."
 msgstr "Σιγουρευτείτε ότι το Wordpress μπορεί να στείλει ηλεκτρονικά μηνύματα (email)."
 
-msgid "This is the default language of the plugin. It cannot be modified."
-msgstr "Αυτή είναι η προεπιλεγμένη γλώσσα για το plugin. Δεν μπορεί να αλλαχτεί."
+msgid "%s file cannot be created for %s as there is no translated sentence. Please, translate at least one sentence to create a file"
+msgstr ""
 
-msgid "Change the default language used"
-msgstr "Αλλάξτε την προεπιλεγμένη γλώσσα που χρησιμοποιείται."
+msgid "%s file has been updated for %s"
+msgstr ""
 
-msgid "Set the language"
-msgstr "Καθορίστε τη γλώσσα"
+msgid "%s file has been updated from this file"
+msgstr ""
+
+msgid "%s file has been created with a new translation for %s"
+msgstr ""
+
+msgid "%s file has been created from this file"
+msgstr ""
+
+msgid "If you do not want to loose your translations on the next upgrading of this plugin, it is recommended to send the translation files to the author by clicking %s here %s !"
+msgstr ""
+
+msgid "If you do not want to loose your translations on the next upgrading of this plugin, please save them on your hard disk before upgrading and then restore them after the upgrade !"
+msgstr ""
+
+msgid "Summary cached %s"
+msgstr ""
+
+msgid "The sentences used in this plugin are in English. Help the others users using the same language as you by translating this plugin."
+msgstr ""
+
+msgid "This plugin is available in %d languages."
+msgstr ""
+
+msgid "There are %d sentences to be translated in this plugin."
+msgstr ""
 
 msgid "Ratio %"
 msgstr "Αναλογία %"
+
+msgid "Translators"
+msgstr "Μεταφραστές"
+
+msgid "This is the default language of the plugin. It cannot be modified."
+msgstr "Αυτή είναι η προεπιλεγμένη γλώσσα για το plugin. Δεν μπορεί να αλλαχτεί."
 
 msgid "Modify"
 msgstr "Μεταρυθμίστε"
@@ -308,33 +329,141 @@ msgstr "Προσθέστε μια νέα μετάφραση"
 msgid "You may add a new translation hereafter (Please note that it is recommended to send your translation to the author so that he would be able to add your translation to the future release of the plugin !)"
 msgstr "Μπορείτε να προσθέσετε μια νέα μετάφραση από εδώ και στο εξής (Παρακαλείστε να στείλετε τη μετάφρασή σας στον κατασκευαστή για να μπορέσει να την προσθέσει σε μελλοντικές αλλαγές του plugin)"
 
-msgid "(by default, its value is:"
-msgstr "(Προεπιλεκτικά η αξία του είναι:"
+msgid "Add"
+msgstr "Πρόσθεση"
 
-msgid "Return value:"
-msgstr "Αξία επιστροφής:"
+msgid "The 'SL framework' is a framework used for developping many plugins like this one. Thus, if you participate translating the framework, it will be very helpful for a bunch of plugins."
+msgstr ""
 
-msgid "Typical call:"
-msgstr "Συνηθισμένη κλήση:"
+msgid "There is %d languages supported for the 'SL framework'."
+msgstr ""
 
-msgid "See also:"
-msgstr "Δείτε επίσης:"
+msgid "There is %d sentence to be translated in the framework."
+msgstr ""
 
-msgid "[CLASS]"
-msgstr "[ΚΛΑΣΗ]"
+msgid "Send to the author of the framework"
+msgstr ""
 
-msgid "KB"
-msgstr "ΚΒ"
+msgid "Donate"
+msgstr ""
 
-msgid "MB"
-msgstr "ΜΒ"
+msgid "If you like the plugin, do not hesitate to donate. Please note that this plugin is developed in my spare time for free."
+msgstr ""
 
-msgid "GB"
-msgstr "GB"
+msgid "This is not mandatory! but it may be a sign that this plugin fits you needs: it makes me happy..."
+msgstr ""
 
 msgid "Feedback form"
 msgstr "Φόρμα αναπληροφόρησης"
 
+msgid "This form is an easy way to contact the author and to discuss issues/incompatibilities/etc. with him"
+msgstr ""
+
 msgid "Contact the author"
 msgstr "Επικοινωνήστε με τον κατασκευαστή"
+
+msgid "Your email:"
+msgstr "Η ηλεκτρονική σας διεύθυνση:"
+
+msgid "Useful... so that the author will be able to anwser you."
+msgstr ""
+
+msgid "Your comments:"
+msgstr "Τα σχόλιά σας;"
+
+msgid "Please note that additional information on your wordpress installation will be sent to the author in order to help the debugging if needed (such as : the wordpress version, the installed plugins, etc.)"
+msgstr ""
+
+msgid "Send feedback"
+msgstr ""
+
+msgid "No email have been provided for the author of this plugin. Therefore, the feedback is impossible"
+msgstr ""
+
+msgid "The feedback has been sent"
+msgstr ""
+
+msgid "Plugins that you may install"
+msgstr ""
+
+msgid "The following plugins have been developed by the author and are not yet installed:"
+msgstr ""
+
+msgid "Plugin not yet installed"
+msgstr ""
+
+msgid "Description and Screenshots"
+msgstr ""
+
+msgid "All author's plugins have been installed. Thank you!"
+msgstr ""
+
+msgid "Installed plugins"
+msgstr ""
+
+msgid "You have already installed the following author's plugins:"
+msgstr ""
+
+msgid "Plugin already installed"
+msgstr ""
+
+msgid "The Wordpress page: %s"
+msgstr "Η σελίδα του Wordpress: %s"
+
+msgid "An Unexpected HTTP Error occurred during the API request."
+msgstr "Ένας απρόσμενος HTTP Error σημειώθηκε κατά την κλήση του API."
+
+msgid "Last update:"
+msgstr "Τελευταία εκσυγχρόνηση:"
+
+msgid "Rating: %s"
+msgstr "Εκτίμηση: %s"
+
+msgid "by %s persons"
+msgstr "από %s άτομα"
+
+msgid "Number of download:"
+msgstr "Αριθμός του download:"
+
+msgid "Close popup"
+msgstr ""
+
+msgid "Filter: %s"
+msgstr ""
+
+msgid "%s of %s"
+msgstr ""
+
+msgid "Current Page"
+msgstr ""
+
+msgid "Error: %s function is not found"
+msgstr ""
+
+msgid "The file %s cannot be read. You should have a problem with file permissions or security restrictions."
+msgstr ""
+
+msgid "The folder %s cannot be opened. You should have a problem with folder permissions or security restrictions."
+msgstr ""
+
+msgid "The file %s cannot be deleted. You should have a problem with file permissions or security restrictions."
+msgstr ""
+
+msgid "An other process is still running (it runs for %s seconds)"
+msgstr ""
+
+msgid "The file %s cannot be modified/created. You should have a problem with file permissions or security restrictions."
+msgstr ""
+
+msgid "The file %s cannot be created. You should have a problem with file permissions or security restrictions."
+msgstr ""
+
+msgid "The file %s cannot be compressed."
+msgstr ""
+
+msgid "The file %s cannot be renamed. You should have a problem with file permissions or security restrictions."
+msgstr ""
+
+msgid "The file %s cannot be modified. You should have a problem with file permissions or security restrictions."
+msgstr ""
 
