--- a/lang/backup_scheduler-pt_PT.po
+++ b/lang/backup_scheduler-pt_PT.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-02-25T10:48:19+00:00\n"
+"PO-Revision-Date: 2013-04-07T14:29:43+00:00\n"
 "Last-Translator: FranciscoRocha <franciscorocha.paparoka.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -24,7 +24,7 @@ msgid "This plugin enables scheduled backup of important part of your website : 
 msgstr "Este plugin activa os backups programados das partes importantes do sitio: simples de usar e eficiente!"
 
 msgid "Sorry, but you should install/activate %s on your website. Otherwise, this plugin will not work properly!"
-msgstr "Desculpe, mas você deve instalar / ativar % s no seu sitio. Caso contrário, este plugin não funcionará corretamente!"
+msgstr "Desculpe, mas você deve instalar / ativar %s no seu sitio. Caso contrário, este plugin não funcionará corretamente!"
 
 msgid "How often do you want to backup your website?"
 msgstr "Com qual frequencia quer realizar o backup do seu sitio?"
@@ -43,6 +43,27 @@ msgstr ""
 
 msgid "Keep the backup files for (in days):"
 msgstr "Guardar os ficheiros de backup por (em dias):"
+
+msgid "If you want to be notify when the backup process is finished, please enter your email:"
+msgstr ""
+
+msgid "Customize the name of the files?"
+msgstr ""
+
+msgid "Add this string to the name of the files:"
+msgstr ""
+
+msgid "The name of the files will be %s."
+msgstr ""
+
+msgid "% is the string of the present option. You may set this option to %s."
+msgstr ""
+
+msgid "% is a random string for security reasons."
+msgstr ""
+
+msgid "% is the extension (i.e. %s)."
+msgstr ""
 
 msgid "What do you want to save?"
 msgstr "O que é que quer guardar?"
@@ -68,14 +89,44 @@ msgstr "O directorio de Temas:"
 msgid "Check this option if you want to save all themes that you have installed and that you use on this website."
 msgstr "Seleccione esta opção se pretende gravar todos os temas que tem instalados no seu sitio."
 
-msgid "The upload directory:"
-msgstr "O directorio de Upload:"
+msgid "The upload directory for this blog:"
+msgstr ""
 
 msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your website to create your articles/posts/pages."
 msgstr "Seleccione esta opção se pretende gravar todas as imagens, ficheiros, etc. que foram descarregadas no seu sitio para criar artigos/entradas/paginas."
 
+msgid "All upload directories (for this site and the sub-blogs):"
+msgstr ""
+
+msgid "Check this option if you want to save the images, the files, etc. that people have uploaded on their websites to create articles/posts/pages."
+msgstr ""
+
+msgid "The upload directory for the main site:"
+msgstr ""
+
+msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your main website to create your articles/posts/pages."
+msgstr ""
+
+msgid "The upload directory:"
+msgstr "O directorio de Upload:"
+
 msgid "The SQL database:"
 msgstr "A base de dados SQL:"
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc. for this blog"
+msgstr ""
+
+msgid "All SQL databases:"
+msgstr ""
+
+msgid "Check this option if you want to save all texts of posts, configurations, etc. for all blogs in this website"
+msgstr ""
+
+msgid "Only your SQL database:"
+msgstr ""
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc. for the main website"
+msgstr ""
 
 msgid "Check this option if you want to save the text of your posts, your configurations, etc."
 msgstr "Seleccione esta opção se quer gravar o texto das suas entradas, a suas configurações, etc."
@@ -116,13 +167,25 @@ msgstr ""
 msgid "Should be at the form %s or %s"
 msgstr ""
 
+msgid "If %s is omitted then it is automatically added when connecting to your FTP. This is useful if you get an 404 error submitting these parameters with %s."
+msgstr ""
+
+msgid "FTP port:"
+msgstr ""
+
+msgid "By default the port is %s"
+msgstr ""
+
 msgid "Your FTP login:"
 msgstr ""
 
 msgid "Your FTP pass:"
 msgstr ""
 
-msgid "If you want to be notify when the FTP storage is finished, please enter your email:"
+msgid "Click on that button %s to test if the above information is correct"
+msgstr ""
+
+msgid "Test"
 msgstr ""
 
 msgid "Your PHP installation does not support FTP features, thus this option has been disabled! Sorry..."
@@ -155,6 +218,9 @@ msgstr "Mesmo que não tenham nenhum restrição de tempo, é recomendavel que c
 msgid "Here is the backup files. You can force a new backup or download previous backup files."
 msgstr "Aqui estão os seus ficheiros de backup. Pode forçar um novo backup ou descarregar um backup ja concluído."
 
+msgid "Please note that the current GMT time of the server is %s. If it is not correct, please configure the Wordpress installation correctly."
+msgstr ""
+
 msgid "An automatic backup will be launched in %s days and %s hours."
 msgstr "Um backup automatico vai ser realizado dentro de %s dias e %s horas"
 
@@ -165,6 +231,36 @@ msgid "Force a new backup (with Mail/FTP)"
 msgstr ""
 
 msgid "Force a new backup (without any external storage or sending)"
+msgstr ""
+
+msgid "How to restore the backup files?"
+msgstr ""
+
+msgid "To restore the backups, and if you have backuped the full installation, you will have to execute the following steps:"
+msgstr ""
+
+msgid "Save all zip files (i.e. *.zip, *.z01, *.z02, etc.) in a single folder on your hard disk."
+msgstr ""
+
+msgid "Unzip these files by using IZArc, Winzip, or Winrar (others software could not support these multipart zip and consider that the archive is corrupted)."
+msgstr ""
+
+msgid "Save the extracted files on your webserver."
+msgstr ""
+
+msgid "Reimport the SQL files (i.e. *.sql1, *sql2, etc.) with phpmyadmin (it is recommended to save your database first)."
+msgstr ""
+
+msgid "To restore the backups, and if you have backuped only some folders, you will have to execute the following steps:"
+msgstr ""
+
+msgid "Install a fresh version of Wordpress on your webserver."
+msgstr ""
+
+msgid "Replace the folders (i.e. 'plugins',  'themes', and/or 'uploads') of the root of your webserver by the extracted folders."
+msgstr ""
+
+msgid "Replace the wp-config.php (at the root of your webserver) with the extracted one."
 msgstr ""
 
 msgid "Backups"
@@ -206,10 +302,10 @@ msgstr "Remova estes ficheiros de backup"
 msgid "The process is still in progress for this backup (begun %s at %s)."
 msgstr ""
 
-msgid "The SQL extraction is in progress (%s tables extracted)."
+msgid "The SQL extraction is in progress (%s entries extracted)."
 msgstr ""
 
-msgid "The ZIP creation is in progress (%s files has been added in the zip file and the current size of the zip is %s)."
+msgid "The ZIP creation is in progress (%s files has been added in %s zip files and the current size of the zip files is %s)."
 msgstr ""
 
 msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
@@ -227,25 +323,31 @@ msgstr ""
 msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
 msgstr "(por agora, não existem ficheiros de backup... Pode aguardar ou forçar um backup."
 
-msgid "Please wait, a backup is in progress! If you want to force a new backup, refresh this page and end the current backup first."
+msgid "Please wait, a backup is in progress for %s seconds! Wait until %s seconds for an automatic restart."
 msgstr ""
 
-msgid "It is impossible to create the %s file in the %s folder. Please check folder/file permissions."
+msgid "This error message may also be generated if the chunk size is too big: try first to set the chunk size to 1Mo in order to avoid any memory saturation of your server and then increase it slowly..."
 msgstr ""
 
-msgid "An other SQL extraction is still in progress (for %s seconds)... Please wait!"
-msgstr "Outra estração de SQL esta ser realizada (a $s segundos)... Por favor aguarde!"
+msgid "(SQL extraction - ending)"
+msgstr ""
 
 msgid "(SQL extraction)"
 msgstr ""
 
-msgid "An other backup is still in progress (for %s seconds)... Please wait!"
-msgstr "Outro backup esta a ser realizado (a %s segundos) ... Porfavor aguarde!"
+msgid "(SQL extraction - nothing to be done)"
+msgstr ""
 
 msgid "(ZIP creation)"
 msgstr ""
 
 msgid "(FTP sending)"
+msgstr ""
+
+msgid "(FTP sending - ending)"
+msgstr ""
+
+msgid "(FTP sending - nothing to be done)"
 msgstr ""
 
 msgid "Backup of %s on %s (%s)"
@@ -257,14 +359,17 @@ msgstr ""
 msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
 msgstr ""
 
-msgid "The file %s cannot be deleted. You should have a problem with file permissions or security restrictions."
+msgid "(MAIL sending - ending)"
+msgstr ""
+
+msgid "(MAIL sending - nothing to be done)"
+msgstr ""
+
+msgid "(END - ending)"
 msgstr ""
 
 msgid "An unknown error occured!"
 msgstr "Aconteceu um erro desconhecido!"
-
-msgid "The process has been canceled by a third person"
-msgstr ""
 
 msgid "A new backup has been generated!"
 msgstr "Um novo backup foi gerado!"
@@ -278,10 +383,55 @@ msgstr "Foi anexo o  %s no backup de %s ficheiros por hoje"
 msgid "Best regards,"
 msgstr "Melhores cumprimentos,"
 
-msgid "%s backup files has been successfully saved on your FTP (%s)"
+msgid "Please find hereafter a summary of the backup process."
 msgstr ""
 
-msgid "Backup of %s on %s - FTP confirmation"
+msgid "Global synthesis"
+msgstr ""
+
+msgid "The backup process has started on %s and have lasted %s minutes and %s seconds"
+msgstr ""
+
+msgid "SQL synthesis"
+msgstr ""
+
+msgid "The SQL extraction has started on %s and have lasted %s minutes and %s seconds"
+msgstr ""
+
+msgid "%s entries have been extracted and have been stored in %s files."
+msgstr ""
+
+msgid "%s created on %s"
+msgstr ""
+
+msgid "ZIP synthesis"
+msgstr ""
+
+msgid "The ZIP creation phase has started on %s and have lasted %s minutes and %s seconds"
+msgstr ""
+
+msgid "%s files have been stored into %s split files (zip, z01, z02, etc.)."
+msgstr ""
+
+msgid "Please note that %s files have been excluded from the backup process because their sizes exceed the chunk size (i.e. %s Mo)."
+msgstr ""
+
+msgid "%s (size %s)"
+msgstr ""
+
+msgid "These zip files are accessible for %s days at the following path:"
+msgstr ""
+
+msgid "FTP synthesis"
+msgstr ""
+
+msgid "The %s zip files have been stored on the specified FTP: %s"
+msgstr ""
+
+msgid "%s stored on %s"
+msgstr ""
+
+msgid "Backup of %s on %s"
 msgstr ""
 
 msgid "No host has been defined"
@@ -296,9 +446,21 @@ msgstr ""
 msgid "The file %s cannot be transfered to the FTP repository! The ftp_put function returns: %s"
 msgstr ""
 
+msgid "The file %s cannot be transfered to the FTP repository and PASV mode cannot be entered : %s"
+msgstr ""
+
 msgid "The specified folder %s does not exists. Please create it so that the transfer may start!"
 msgstr ""
 
 msgid "The login/password does not seems valid!"
+msgstr ""
+
+msgid "The folder %s does not seems to be writable"
+msgstr ""
+
+msgid "It seems impossible to switch to PASV mode"
+msgstr ""
+
+msgid "Everything OK!"
 msgstr ""
 
